--- a/Seguros/Seguros/SPA/Views/EditarSeguro.html
+++ b/Seguros/Seguros/SPA/Views/EditarSeguro.html
@@ -78,7 +78,7 @@
             <div class="modal-footer">
                 <div class="bootstrap-dialog-footer">
                     <div class="bootstrap-dialog-footer-buttons">
-                        <button class="btn btn-first btn-primary btn-sm" ng-click="PutSeguro()">Save</button>
+                        <button class="btn btn-first btn-primary btn-sm" ng-click="PutSeguro(Seguro)">Save</button>
                     </div>
                 </div>
             </div>
