Cambios en el seed

--- a/Seguros/Seguros/SPA/Views/CrearSeguro.html
+++ b/Seguros/Seguros/SPA/Views/CrearSeguro.html
@@ -11,7 +11,7 @@
         <div class="modal-body">
             <div class="bootstrap-dialog-body">
                 <div class="form-group">
-                    <label for="example-text-input" class="col-2 col-form-label">Tipo de Cubrimiento</label>
+                    <label for="example-text-input" class="col-2 col-form-label">Nombre del Seguro</label>
                     <div class="col-10">
                         <input class="form-control" type="text" ng-model="Seguro.Nombre">
                     </div>
